--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "bitcore-mnemonic": "=1.1.1",
     "copy-to-clipboard": "=3.0.6",
     "flexboxgrid": "=6.3.1",
-    "lisk-js": "=0.4.5",
     "moment": "=2.15.1",
     "postcss": "=6.0.2",
     "postcss-cssnext": "=2.11.0",
@@ -49,7 +48,8 @@
     "react-waypoint": "=7.0.4",
     "redux": "=3.6.0",
     "redux-logger": "=3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shift-js": "https://github.com/ShiftNrg/shift-js"
   },
   "devDependencies": {
     "@storybook/addon-actions": "=3.2.0",
