--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "Shift Nano",
   "main": "main.js",
   "author":{
-    "name": "Lisk Foundation",
-    "email": "admin@lisk.io"
+    "name": "Shift",
+    "email": "info@shiftnrg.org"
   }
 }
