--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "shift-nano",
+  "name": "oxy-nano",
   "version": "1.1.0",
-  "description": "Shift Nano",
+  "description": "Oxy Nano",
   "main": "main.js",
   "author":{
-    "name": "Shift",
-    "email": "info@shiftnrg.org"
+    "name": "Oxy",
+    "email": "info@oxycoin.io"
   }
 }
